--- a/about.html
+++ b/about.html
@@ -6,7 +6,6 @@
     <!-- Lesson2より -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap Sample</title>
     <!-- BootstrapのCSS読み込み -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <!-- jQuery読み込み -->
@@ -19,9 +18,9 @@
      <header>
         <nav>
           <ul>
-            <li><a href="index.html">Home（現在工事中）</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html" class="selected">About</a></li>
-            <li><a href="contact.html">Contact（現在工事中）</a></li>
+            <li><a href="#">Contact（現在工事中）</a></li>
           </ul>
         </nav>
         <div id="logo">
@@ -36,7 +35,7 @@
            <p>長岡 203（プログラマー）</p>
            <p>東京都某区出身。サラリーマンです。</p>
            <p>最近は、<span class="red">Ruby on Rails</span>を学び始めました。</p>
-           <p>私のポートフォリオを見て気になった方は、<a href="contact.html">Contact</a>よりご連絡お願いいたします。</p>
+           <p>私のポートフォリオを見て気になった方は、<a href="#">Contact</a>よりご連絡お願いいたします。</p>
          <h3>作成したサービス一覧</h3>
            <table class="table table-striped table-bordered">
              <thead>
